@@ -8,6 +8,11 @@ libsoup2.4 (2.25.91-2) UNRELEASED; urgency=low
   * debian/rules:
   - re-enable gtk-doc support, and enable GNOME support
 
+  Changes borrowed from Ubuntu (thanks):
+  * debian/control.in, libsoup-gnome2.4-dev:
+  - also split dev package, and add nice description of what the GNOME
+    support library is
+
  -- Gustavo Noronha Silva <kov@debian.org>  Thu, 05 Mar 2009 07:49:04 -0300
 
 libsoup2.4 (2.25.91-1) experimental; urgency=low
